--- a/CET322_HW2/appsettings.json
+++ b/CET322_HW2/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolConnection": "Server=.;Database=School;Trusted_Connection=True;ConnectRetryCount=0;"
+    "SchoolConnection": "Server=.;Database=School_VS2;Trusted_Connection=True;ConnectRetryCount=0;"
   }
 }
